# graphics_project

./: .gitignore  CMakeLists.txt  README.md
res/: box.blend  box.blend1  box.mtl  bricks.tga  deferred-shading.frag  deferred-shading.vert  fragment-shader.frag  material_model.blend  material_model.blend1  material_model.mtl  skybox.blend  skybox.blend1  skybox.mtl  vertex-shader.vert
res/crytek-sponza/textures/: background.tga  backgroundBGR.tga  chain_texture.tga  lion.tga  spnza_bricks_a_diff.tga  spnza_bricks_a_spec.tga  sponza_arch_diff.tga  sponza_arch_spec.tga  sponza_ceiling_a_diff.tga  sponza_ceiling_a_spec.tga  sponza_column_a_diff.tga  sponza_column_a_spec.tga  sponza_column_b_diff.tga  sponza_column_b_spec.tga  sponza_column_c_diff.tga  sponza_column_c_spec.tga  sponza_curtain_blue_diff.tga  sponza_curtain_diff.tga  sponza_curtain_green_diff.tga  sponza_details_diff.tga  sponza_details_spec.tga  sponza_fabric_blue_diff.tga  sponza_fabric_diff.tga  sponza_fabric_green_diff.tga  sponza_fabric_spec.tga  sponza_flagpole_diff.tga  sponza_flagpole_spec.tga  sponza_floor_a_spec.tga  sponza_roof_diff.tga  vase_dif.tga  vase_hanging.tga  vase_plant.tga  vase_plant_spec.tga  vase_round.tga  vase_round_spec.tga
res/dabrovic-sponza/: sponza2.mtl
src/: CMakeLists.txt  Components.h  Engine.cpp  Engine.h  Resource.cpp  Resource.h  main.cpp
src/gfx/: Bitmap.cpp  Bitmap.h  Gbuffer.cpp  Gbuffer.h  Mesh.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Window.cpp  Window.h
src/util/: Class.cpp  Class.h  Manager.h  NonCopyable.h  Pool.h
